-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta3
-
None
-
d07c9071b (dev), 610b8a07b (6.8), ec7bbe7e4 (6.8.0)
To reproduce this the design effects demo is required: https://git.qt.io/public-demos/qtdesign-studio/-/blob/master/examples/DesignEffectsDemo
This is a regression against Qt 6.7.2.
how to reproduce:
Run the livepreview with CalculatorDemo.ui.qml from the command line:
qmlpreview qml.exe -I "C:/Users/Thomas Hartmann/Documents/QtDesignStudio/examples/DesignEffectsDemo/imports" "C:/Users/Thomas Hartmann/Documents/QtDesignStudio/examples/DesignEffectsDemo/content/calculator/CalculatorDemo.ui.qml"
stack trace:
Qt6Qml.dll!QQmlPrivate::AOTCompiledContext::loadSingletonLookup(unsigned int index, void * target) Line 2007 C++ [External Code] [Inline Frame] Qt6Qml.dll!QV4::Moth::VME::exec::__l2::<lambda_1>::operator()(void * *) Line 446 C++ Qt6Qml.dll!QV4::coerceAndCall<AOTCompiledMetaMethod,`QV4::Moth::VME::exec'::`2'::<lambda_1>>(QV4::ExecutionEngine * engine, const AOTCompiledMetaMethod * typedFunction, void * * argv, const QMetaType * types, int argc, QV4::Moth::VME::exec::__l2::<lambda_1> call) Line 556 C++ Qt6Qml.dll!QV4::Moth::VME::exec(QV4::MetaTypesStackFrame * frame, QV4::ExecutionEngine * engine) Line 431 C++ Qt6Qml.dll!QV4::ArrowFunction::virtualCallWithMetaTypes(const QV4::FunctionObject * fo, QObject * thisObject, void * * a, const QMetaType * types, int argc) Line 507 C++ [Inline Frame] Qt6Qml.dll!QV4::FunctionObject::call(QObject *) Line 194 C++ Qt6Qml.dll!QQmlPrivate::AOTCompiledContext::callObjectPropertyLookup(unsigned int index, QObject * object, void * * args, const QMetaType * types, int argc) Line 1869 C++ [External Code] [Inline Frame] Qt6Qml.dll!QV4::Moth::VME::exec::__l2::<lambda_1>::operator()(void * *) Line 446 C++ Qt6Qml.dll!QV4::coerceAndCall<AOTCompiledMetaMethod,`QV4::Moth::VME::exec'::`2'::<lambda_1>>(QV4::ExecutionEngine * engine, const AOTCompiledMetaMethod * typedFunction, void * * argv, const QMetaType * types, int argc, QV4::Moth::VME::exec::__l2::<lambda_1> call) Line 556 C++ Qt6Qml.dll!QV4::Moth::VME::exec(QV4::MetaTypesStackFrame * frame, QV4::ExecutionEngine * engine) Line 431 C++ Qt6Qml.dll!QV4::Function::call(QObject * thisObject, void * * a, const QMetaType * types, int argc, QV4::ExecutionContext * context) Line 37 C++ Qt6Qml.dll!QQmlJavaScriptExpression::evaluate(void * * a, const QMetaType * types, int argc) Line 270 C++ Qt6Qml.dll!QQmlBoundSignalExpression::evaluate(void * * a) Line 197 C++ Qt6Qml.dll!QQmlBoundSignal_callback(QQmlNotifierEndpoint * e, void * * a) Line 316 C++ Qt6Qml.dll!QQmlNotifier::emitNotify(QQmlNotifierEndpoint * endpoint, void * * a) Line 71 C++ Qt6Qml.dll!QQmlData::signalEmitted(QAbstractDeclarativeData * __formal, QObject * object, int index, void * * a) Line 340 C++ Qt6Core.dll!doActivate<0>(QObject * sender, int signal_index, void * * argv) Line 4016 C++ Qt6Core.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 4181 C++ [Inline Frame] Qt6Quick.dll!QQuickItem::xChanged() Line 1455 C++ [Inline Frame] Qt6Quick.dll!QQuickItemPrivate::xChanged() Line 583 C++ Qt6Quick.dll!QObjectCompatProperty<QQuickItemPrivate,double,&QQuickItemPrivate::_qt_property_x_offset,{QQuickItemPrivate::setX,0},{QQuickItemPrivate::xChanged,0},0>::notify() Line 689 C++ Qt6Quick.dll!QQuickItem::geometryChange(const QRectF & newGeometry, const QRectF & oldGeometry) Line 3917 C++ Qt6Quick.dll!QQuickItem::setX(double v) Line 7222 C++ Qt6Quick.dll!QQuickItem::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 1232 C++ Qt6Quick.dll!QQuickItem::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 1314 C++ Qt6Quick.dll!QQuickImplicitSizeItem::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 130 C++ Qt6Quick.dll!QQuickText::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 1078 C++ [Inline Frame] Qt6Qml.dll!QQmlPropertyData::doMetacall(QObject * idx, int) Line 369 C++ Qt6Qml.dll!QQmlPropertyData::writeProperty(QObject * target, void * value, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 387 C++ [Inline Frame] Qt6Qml.dll!BindingFixer::{dtor}() Line 1351 C++ Qt6Qml.dll!QQmlPropertyPrivate::write(QObject * object, const QQmlPropertyData & property, const QVariant & value, const QQmlRefPointer<QQmlContextData> & context, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1736 C++ Qt6Qml.dll!QQmlPropertyPrivate::writeValueProperty(QObject * object, const QQmlPropertyData & core, const QQmlPropertyData & valueTypeData, const QVariant & value, const QQmlRefPointer<QQmlContextData> & context, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1312 C++ Qt6Qml.dll!QQmlPropertyPrivate::writeValueProperty(const QVariant & value, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1250 C++ Qt6QuickTimeline.dll!QQuickKeyframeGroup::setProperty(double frame) Line 421 C++ [Inline Frame] Qt6QuickTimeline.dll!QQuickTimeline::reevaluate() Line 282 C++ Qt6QuickTimeline.dll!QQuickTimeline::setCurrentFrame(double frame) Line 271 C++ Qt6Qml.dll!QQmlPropertyData::writeProperty(QObject * target, void * value, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 385 C++ [Inline Frame] Qt6Qml.dll!BindingFixer::{dtor}() Line 1351 C++ Qt6Qml.dll!QQmlPropertyPrivate::write(QObject * object, const QQmlPropertyData & property, const QVariant & value, const QQmlRefPointer<QQmlContextData> & context, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1736 C++ Qt6Qml.dll!QQmlPropertyPrivate::writeValueProperty(QObject * object, const QQmlPropertyData & core, const QQmlPropertyData & valueTypeData, const QVariant & value, const QQmlRefPointer<QQmlContextData> & context, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1312 C++ Qt6Qml.dll!QQmlPropertyPrivate::writeValueProperty(const QVariant & value, QFlags<enum QQmlPropertyData::WriteFlag> flags) Line 1250 C++
We see similar crashes with other examples, but this is the most simple one.
For Gerrit Dashboard: QTBUG-128638 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
589846,5 | QtQml: Never clear all executable CUs from the QQmlEngine | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
589920,2 | QtQml: Never clear all executable CUs from the QQmlEngine | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
589966,2 | QtQml: Never clear all executable CUs from the QQmlEngine | 6.8.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |