QtQml: Never clear all executable CUs from the QQmlEngine

Since the executable CUs are used as entry points for marking by the GC,
dropping them from QQmlEngine means their strings, lookups, regexes etc
won't get marked anymore. If, however, the CUs are still referenced
elsewhere, their inner objects will still get used, despite having
potentially been swept by the GC.

Also fix the documentation of clearComponentCache() to clarify that it
does in fact not clear all components.

Fixes: QTBUG-128638
Fixes: QTBUG-128782
Change-Id: I96480914733c399c18778202ae8dca7e332c3a85
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit d07c9071b4b172c69d0f5a7474e1e1c22de28e8e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>