src/qml/qml/qqmlengine.cpp
@@ -575,14 +575,16 @@ QQmlEngine::~QQmlEngine()
 /*!
   Clears the engine's internal component cache.
 
-  This function causes the property metadata of all components previously
-  loaded by the engine to be destroyed.  All previously loaded components and
-  the property bindings for all extant objects created from those components will
-  cease to function.
+  This function causes the property metadata of most components previously
+  loaded by the engine to be destroyed. It does so by dropping unreferenced
+  components from the engine's component cache. It does not drop components that
+  are still referenced since that would almost certainly lead to crashes further
+  down the line.
 
-  This function returns the engine to a state where it does not contain any loaded
-  component data.  This may be useful in order to reload a smaller subset of the
-  previous component set, or to load a new version of a previously loaded component.
+  If no components are referenced, this function returns the engine to a state
+  where it does not contain any loaded component data. This may be useful in
+  order to reload a smaller subset of the previous component set, or to load a
+  new version of a previously loaded component.
 
   Once the component cache has been cleared, components must be loaded before
   any new objects can be created.
@@ -611,7 +613,7 @@ void QQmlEngine::clearComponentCache()
     mm->runGC();
     mm->gcStateMachine->timeLimit = std::move(oldLimit);
 
-    handle()->clearCompilationUnits();
+    handle()->trimCompilationUnits();
     d->typeLoader.lock();
     d->typeLoader.clearCache();
     d->typeLoader.unlock();
